--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
             <version>3.12.1.GA</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
+        </dependency>
+
     </dependencies>
 
     <build>
